# test-python

./: README.md  glm_model.py  glm_vs_linear_finding.txt  linear_model.py  pyproject.toml
