[project]
name = "test-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]
